--- a/ACS/ACS_Volvo/frontend/index.html
+++ b/ACS/ACS_Volvo/frontend/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Users/gimtaemin/Downloads/volvo_test/frontend/src/assets/signature04.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/signature04.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ACS System</title>
+    <!-- JSMpeg for RTSP video streaming -->
+    <script src="https://jsmpeg.com/jsmpeg.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
